Preview Spacing Fixes

--- a/un_project/website/static/css/players_styles.css
+++ b/un_project/website/static/css/players_styles.css
@@ -214,6 +214,11 @@ body {
     margin: 0;
 }
 
+.tooltip .preview {
+    padding: 0;
+    margin: 0;
+}
+
 .prioritySelector {
     width: 500px;
 }
